fix gần xong booking , fix xong các lôi cơ bản

--- a/PPl3/Areas/User/Views/HomeUser/Index.cshtml
+++ b/PPl3/Areas/User/Views/HomeUser/Index.cshtml
@@ -79,7 +79,7 @@
             }
             else
             {
-                <div class="room_classifi_item room_classifi_item_@item.id" onclick="window.location.href='/User/HomeUser/Index?id=@item.id&checkID=@ViewBag.checkId'">
+                <div class="room_classifi_item room_classifi_item_@item.id" onclick="window.location.href='/User/HomeUser/Index?id=@item.id'">
                     <div class="box_room_classifi">
                         <img src="@item.icon_image" />
                         <span>@item.amenity_name</span>
