--- a/PPl3/Views/Home/Index.cshtml
+++ b/PPl3/Views/Home/Index.cshtml
@@ -57,7 +57,7 @@
             }
             else
             {
-                <div class="room_classifi_item room_classifi_item_@item.id" onclick="window.location.href='/home/index?id=@item.id&checkID=@ViewBag.checkId'">
+                <div class="room_classifi_item room_classifi_item_@item.id" onclick="window.location.href='/home/index?id=@item.id'">
                     <div class="box_room_classifi">
                         <img src="@item.icon_image" />
                         <span>@item.amenity_name</span>
@@ -206,4 +206,3 @@
         position++;
     }
 }
-
