--- a/PPl3/Areas/User/Views/HomeUser/Trip.cshtml
+++ b/PPl3/Areas/User/Views/HomeUser/Trip.cshtml
@@ -15,7 +15,8 @@
     <link href="~/ExtraFiles/assets/css/gird.css?v=1" rel="stylesheet" />
     <link href="~/ExtraFiles/assets/css/Trip.css?v=1" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <title>Trip</title>
+    <title>T|.|N|.|T | Trip</title>
+    <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQZf3I4TkruOraYvnm7WbRSU3qYV2Lkj3_0w3wfgQrApnsvo-yspjafW8P57Demy0zgf6U&usqp=CAU">
 </head>
 <body>
     <div class="main">
@@ -54,7 +55,7 @@
                             <ul class="menu_user js_menu_user">
                                 <li class=""><button>Messages</button></li>
                                 <li class=""><button>Notifications</button></li>
-                                <li class=""><button>Trips</button></li>
+                                <li class=""><a href="/user/homeuser/trip">Trips</a></li>
                                 <li class=""><a href="/user/homeuser/wishlist">Wishlist</a></li>
                                 <li><a href="Content">Manage listings</a></li>
                                 <li><a href="#">Account</a></li>
@@ -82,7 +83,7 @@
                         </div>
                         @foreach (var item in Model.ToList())
                         {
-                            if(DateTime.Now >= item.check_in_date && DateTime.Now <= item.check_out_date) { 
+                            if(DateTime.Now >= item.check_out_date || (DateTime.Now >= item.check_in_date && DateTime.Now <= item.check_out_date)) { 
                                 <div class="col l-12 m-12 c-12">
                                     <div class="hotel_container">
                                         <div class="img_hotel" style="background : url(@item.property.property_images.FirstOrDefault().pi_image) top center /cover no-repeat">
@@ -141,7 +142,7 @@
                                             </div>
                                             <div class="date_check">
                                                 <p><i class="fa-solid fa-circle" style="color: greenyellow; margin-right: 5px; font-size: 10px;"></i>Check-In: <span class="check_in">@item.check_in_date.Value.ToString("dd/MM/yyyy")</span></p>
-                                                <p><i class="fa-solid fa-circle" style="color: #ff385c; margin-right: 5px; font-size: 10px;"></i>Check-Out: <span class="check_out">@item.check_out_date.Value.ToString("dd/MM/yyyyy")</span></p>
+                                                <p><i class="fa-solid fa-circle" style="color: #ff385c; margin-right: 5px; font-size: 10px;"></i>Check-Out: <span class="check_out">@item.check_out_date.Value.ToString("dd/MM/yyyy")</span></p>
                                             </div>
                                             <div class="price">
                                                 @{
