--- a/PPl3/Areas/User/Views/HomeUser/wishList.cshtml
+++ b/PPl3/Areas/User/Views/HomeUser/wishList.cshtml
@@ -13,7 +13,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>T|.|n|.|T</title>
+    <title>T|.|N|.|T | WishLists</title>
     <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQZf3I4TkruOraYvnm7WbRSU3qYV2Lkj3_0w3wfgQrApnsvo-yspjafW8P57Demy0zgf6U&usqp=CAU">
     <link href="~/ExtraFiles/assets/css/gird.css?v=2" rel="stylesheet" />
     <link href="~/ExtraFiles/assets/css/wishList.css?v=2" rel="stylesheet" />
